# markers-eval-25

./: .gitignore  .gitignore.save  CMakeLists.txt  Doxyfile  README.md  all_config.json  app  batch.txt  boxes.json  build.md  create-copie.sh  dependancies.md  flake.nix  format.sh  generate_batch.py  meson.build  opti-bench.patch  run_benchmark.sh  shell.nix  test  test.cpp  thresholds_new.pnm
.github/workflows/: linux-test.yml
include/: benchmark.hpp  common.h
matthias_pars/: Matt_parser.cpp  detect_shapes  expl_pars.cpp  pdf_metadata_extractor
matthias_pars/meta/: meta7.json  meta9.json
src/: Matt_parser.cpp  benchmark.cpp  benchmark_old.cpp  example.cpp  expl_pars.cpp  expl_pars_commented.cpp  gen_copies.cpp  modifier.cpp  modifier_cli.cpp  typst_interface.cpp
src/bench/: combined_benchmark.cpp  combined_benchmark.h  config_analysis.cpp  config_analysis.h  gen_parse.cpp  gen_parse.h  generation_time.cpp  generation_time.h  ink_estimation.cpp  ink_estimation.h  limite_bench.cpp  limite_bench.h  parsing_time.cpp  parsing_time.h  time_copy.cpp  time_copy.h
src/command-line-interface/: command_line_interface.cpp  command_line_interface.h
src/external tools/: create_copy.cpp  create_copy.h
src/external-tools/: create_copy.cpp  create_copy.h  modifier.cpp  modifier.h  modifier_constants.h
src/parser/: aruco_parser.c  aruco_parser.cpp  aruco_parser.h  center_marker_parser.cpp  center_marker_parser.h  circle_parser.cpp  circle_parser.h  custom_marker_parser.cpp  custom_marker_parser.h  default_parser.cpp  default_parser.h  qrcode_empty_parser.cpp  qrcode_empty_parser.h  qrcode_parser.cpp  qrcode_parser.h  shape_parser.cpp  shape_parser.h  zxing_parser.h
src/utils/: benchmark_helper.cpp  benchmark_helper.h  cli_helper.cpp  cli_helper.h  csv_utils.h  draw_helper.cpp  draw_helper.h  json_helper.cpp  json_helper.h  math_helper.cpp  math_helper.h  math_utils.cpp  math_utils.h  parser_helper.cpp  parser_helper.h  string_helper.cpp  string_helper.h
stats-analysis/: Analyse_intra_parseur.r  Lanceur.py  README.md  benchmark_bruit.csv  bruit.r  config_analysis.r  csv_by_parser.csv  csv_parfait.csv  figures.r  graph_ppi_vs_temps.r  inter_parser_analysis.r  intra_parser_analysis.r  launcher.py  limite.r  shell.nix
stats-analysis/_old/: README.md  benchmark_bruit.csv
stats-analysis/analysis_results/circle_parser/: circle_parser_statistiques.txt
stats-analysis/analysis_results/comparaison_parseurs/: statistiques_parseurs.csv
stats-analysis/analysis_results/custom_marker_parser/: custom_marker_parser_statistiques.txt
stats-analysis/analysis_results/default_parser/: default_parser_statistiques.txt
stats-analysis/analysis_results/qrcode_empty_parser/: qrcode_empty_parser_statistiques.txt
stats-analysis/analysis_results/qrcode_parser/: qrcode_parser_statistiques.txt
stats-analysis/analysis_results/shape_parser/: shape_parser_statistiques.txt
stats-analysis/resultats_analyse/aruco_parser/: aruco_parser_statistiques.txt
stats-analysis/resultats_analyse/circle_parser/: circle_parser_statistiques.txt
stats-analysis/resultats_analyse/comparaison_parseurs/: statistiques_parseurs.csv
stats-analysis/resultats_analyse/custom_marker_parser/: custom_marker_parser_statistiques.txt
stats-analysis/resultats_analyse/default_parser/: default_parser_statistiques.txt
stats-analysis/resultats_analyse/qrcode_empty_parser/: qrcode_empty_parser_statistiques.txt
stats-analysis/resultats_analyse/qrcode_parser/: qrcode_parser_statistiques.txt
stats-analysis/resultats_analyse/shape_parser/: shape_parser_statistiques.txt
test/: circle.typ  original.typ
test/copie/: circle_copy.typ  original_copy.typ
tools/: format.py  generate_batch.py  qrcode_marker_opti.py
tools/matthias_pars/: recupdonne.py
tools/matthias_pars/meta/: meta1.json  meta10.json  meta2.json  meta3.json  meta4.json  meta5.json  meta6.json  meta8.json
tools/pdf_noiser/: printer_emulator.py
tools/pdf_pourrisseur/: pourrisseur.py  print_scan_emulator.py  print_scan_emulator_argparsed.py  print_scan_emulator_ok.py
typst/: copy-3-filled-circles-rb-barcode.typ  copy.typ  copy_3_circles.typ  copy_4_barcodes.typ  copy_4_barcodes_empty.typ  copy_4_circles.typ  copy_custom_markers.typ  gen_copie.typ  original.typ  template copy.typ  template.typ
typst-lib/copies/: rmqr.typ
typst-lib/test/: boxes.json
typst/common/: gen_copy_common.typ  global_variables.typ  utils.typ
typst/components/: barcode.typ  circle.typ  container.typ  corner_markers copy.typ  corner_markers.typ  id-consent-box.typ  rect.typ
typst/components/markers/: barcode.typ  circle.typ  svg_marker.typ  tiaoma_gen_barcode.typ  tiaoma_gen_marker.typ  triangle.typ
typst/content/: content.typ  presentation-grid.typ  understanding.typ
typst/copie/: content.typ
typst/marker-setup/: 4-barcodes.typ
typst/src/: gen_copy copy.typ  gen_copy.typ
typst/style/: const.typ  input-fill-colors.json
visualisation-courbe/: Lecture_csv.r  benchmark_performance.csv
